--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -66,9 +66,10 @@
         }
 
         .stockroom-key {
-            width: 90%;
+            padding: 0;
+            width: 80%;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
 
             li {
